--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,9 @@
   ],
   "dependencies": {
     "socket.io-client": "~1.3.6",
-    "angularjs": "~1.4.5"
+    "angularjs": "~1.4.5",
+    "ui.bootstrap": "~0.13.4",
+    "angular-bootstrap": "~0.13.4",
+    "bootstrap": "~3.3.5"
   }
 }
