--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bower": "^1.5.2",
     "express": "^4.13.3",
+    "node-uuid": "^1.4.3",
     "redis": "^1.0.0",
     "socket.io": "^1.3.6"
   }
