--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "ui.bootstrap": "~0.13.4",
     "angular-bootstrap": "~0.13.4",
     "bootstrap": "~3.3.5",
-    "async": "~1.4.2"
+    "async": "~1.4.2",
+    "lodash": "~3.10.1"
   }
 }
